# Pytorch-for-Deep-Learning

./: .gitignore  LICENSE  README.md  pyproject.toml
pytorch-fundamentals/Modulo 1/lab 1 - simple nn/: C1_M1_Lab_1_simple_nn.ipynb  helper_utils.py
pytorch-fundamentals/Modulo 1/lab 2 - activation_function/: C1_M1_Lab_2_activation_functions.ipynb
pytorch-fundamentals/Modulo 1/lab 3 - tensors/: C1_M1_Lab_3_tensors.ipynb
pytorch-fundamentals/Modulo 1/lab Examen/: C1M1_Assignment.ipynb
pytorch-fundamentals/Modulo 2/Lab 1 mnist classifer/: C1_M2_Lab_1_mnist_classifier.ipynb
pytorch-fundamentals/Modulo 2/Lab Final - EMNIST classifer/: C1M2_Assignment.ipynb  trained_student_model.pth
pytorch-fundamentals/Modulo 3/Lab Final/: C1M3_Assignment.ipynb
pytorch-fundamentals/Módulo 4/Lab 1 CNN clasificación de la naturaleza/: C1_M4_Lab_1_cnn_nature_classifier.ipynb
pytorch-fundamentals/Módulo 4/Lab 2 Depuración - Inspección - Modularización de modelos/: C1_M4_Lab_2_debugging.ipynb
pytorch-fundamentals/Módulo 4/Lab Final - CNN robusta/: C1M4_Assignment.ipynb
pytorch-techniques and ecosystem tools/Módulo 1 - Optimización de hiperparámetros/Lab 1 - hyperparameter tuning Learning rate and metrics/: C2_M1_Lab_1_tuning_and_metrics.ipynb
pytorch-techniques and ecosystem tools/Módulo 1 - Optimización de hiperparámetros/Lab 2 - Schedulers in Pytorch/: C2_M1_Lab_2_Schedulers.ipynb
pytorch-techniques and ecosystem tools/Módulo 1 - Optimización de hiperparámetros/Lab 3 - Optimización con Optuna/: C2_M1_Lab_3_Optuna.ipynb
(+4 files in other folders)
